--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Chrome installation files
+chrome/profile/
+chrome/bin/
+chrome/*.exe
+chromedriver*
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
